# rag-security-platform

./: AGENTS.md  Makefile  README.md  launch_gate_summary.json
integration-adapter/: README.md  pyproject.toml
integration-adapter/docs/: onyx-to-starterkit-mapping.md
integration-adapter/integration_adapter/: __init__.py  adversarial_harness.py  artifact_output.py  artifact_retention.py  ci_smoke.py  collect_from_onyx.py  config.py  control_matrix.py  demo_scenario.py  env_profiles.py  evidence_pipeline.py  evidence_report.py  exporters.py  generate_artifacts.py  health_report.py  integrity.py  launch_gate_bridge.py  launch_gate_evaluator.py  mappers.py  pipeline.py  raw_sources.py  run_launch_gate.py  sample_data.py  schemas.py  translators.py  validate_config.py  verify_artifact_integrity.py  versioning.py
integration-adapter/tests/: test_adapter_health_telemetry.py  test_adversarial_harness.py  test_artifact_generation.py  test_artifact_retention.py  test_config_validation.py  test_contract_fixtures.py  test_control_matrix.py  test_demo_scenario.py  test_env_profiles.py  test_evidence_pipeline_failures.py  test_evidence_report.py  test_exporters.py  test_health_report.py  test_identity_mapping.py  test_integrity_manifest.py  test_launch_gate_bridge.py  test_launch_gate_evaluator.py  test_launch_gate_summary.py  test_malformed_input.py  test_missing_fields.py  test_output_leakage_scenarios.py  test_pipeline.py  test_raw_sources.py  test_retrieval_poisoning_scenarios.py  test_schemas.py  test_translator_resilience.py  test_translators.py  test_versioning_contracts.py
integration-adapter/tests/fixtures/onyx_contracts/fail/: evals.json  (+4 more)
integration-adapter/tests/integration/: test_ci_smoke_cli.py  test_dashboard_artifact_compatibility.py  test_dashboard_artifact_compatibility_malformed.py  test_dashboard_service_compatibility.py  test_demo_pipeline_smoke.py  test_evidence_pipeline_cli.py  test_step_entrypoints_cli.py  test_verify_integrity_cli.py
(+287 files in other folders)
