[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integration-adapter"
version = "0.1.0"
description = "Non-invasive artifact adapter between Onyx runtime and AI Trust & Security Readiness governance plane"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
integration-adapter-collect = "integration_adapter.collect_from_onyx:main"
integration-adapter-generate = "integration_adapter.generate_artifacts:main"
integration-adapter-gate = "integration_adapter.run_launch_gate:main"
integration-adapter-evidence = "integration_adapter.evidence_pipeline:main"
integration-adapter-validate = "integration_adapter.validate_config:main"
integration-adapter-ci-smoke = "integration_adapter.ci_smoke:main"
integration-adapter-verify-integrity = "integration_adapter.verify_artifact_integrity:main"
integration-adapter-retention = "integration_adapter.artifact_retention:main"
integration-adapter-health = "integration_adapter.health_report:main"
integration-adapter-adversarial = "integration_adapter.adversarial_harness:main"
integration-adapter-control-matrix = "integration_adapter.control_matrix:main"
integration-adapter-evidence-report = "integration_adapter.evidence_report:main"
integration-adapter-launch-gate-bridge = "integration_adapter.launch_gate_bridge:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
